better input field styles - prevent all popup overlap

--- a/framework.css
+++ b/framework.css
@@ -14,6 +14,7 @@
   --light-color: rgb(255, 255, 255);
   --default-color: rgb(100, 100, 255);
   --default-color-light: rgb(150, 150, 255);
+  --default-color-extra-light: rgb(185, 185, 255);
   --info-color: rgb(255, 200, 50);
   --info-color-light: rgb(255, 225, 75);
   --neutral-color: rgb(180, 180, 180);
