--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@
   font-family: "Roboto", "Arial";
 }
 
+#params-container {
+  /* background-color: var(--default-color-extra-light); */
+
+  border-bottom: 1px solid var(--dark-shade);
+}
+
 #params-title {
   min-width: 80%;
 }
@@ -90,7 +96,7 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-1000%, -1000%);
+  transform: translate(1000%, 1000%);
   z-index: 1;
   display: flex;
   flex-direction: column;
@@ -139,12 +145,23 @@
   font-size: 1.17rem;
 }
 
-.input-underline {
-  /* FW? */
+.input-stripped {
   outline: none;
+}
+
+.input-underline {
+  border-radius: 0px 0px 0px 5px;
+  border-width: 0px 0px 1px 0px;
+}
+
+.input-rounded {
+  /* FW? */
+
   /* border-width: 0px;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2); */
-  border-width: 0px 0px 1px 0px;
+  /* border-width: 0px 0px 1px 0px; */
+  border-width: 1px;
+  border-radius: 5px;
 }
 
 /* Chrome, Safari, Edge, Opera */
@@ -179,6 +196,13 @@ label.disabled {
   /* padding: 1rem 0 1rem 1rem;
   margin: 0 1rem 0 0; */
   max-width: 50%;
+}
+
+.data-col input,
+.data-col textarea {
+  border-width: 1px;
+  border-radius: 5px;
+  border-color: var(--dark-shade);
 }
 
 /* .data-col > * {
